--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -170,6 +170,7 @@ footer {
       margin-top: 15px;
   }
 
+
   /* forms */
   
   input, textarea, select, .uneditable-input{
@@ -196,4 +197,18 @@ footer {
       .form-control{
           color: $state-danger-text;
       }
+  }
+
+  .checkbox{
+      margin-top: -10px;
+      margin-bottom: 10px;
+      span {
+          margin-left: 20px;
+          font-weight: normal;
+      }
+  }
+
+  #session_remember_me {
+      width: auto;
+      margin-left: 0;
   }
